# caption-match

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt  settings.yaml
caption_match/: __init__.py  embedder.py  photo_loader.py  rerank.py  superlinked_client.py
data/: .gitignore
notebooks/: 002-unsplash.ipynb
scripts/: app-captions-only.py  app.py
src/: app.py  constants.py  embedder.py  photo_loader.py  superlinked_client.py  utils.py
